--- a/resources/mixes/auth-assets/sass/app.scss
+++ b/resources/mixes/auth-assets/sass/app.scss
@@ -33,7 +33,7 @@ body {
 
         &:before {
             content: '';
-            background: url("../images/chaty-bunny.svg") no-repeat center / 100%;
+            background: url("../../commen/images/chaty-bunny.svg") no-repeat center / 100%;
             width: 235px;
             height: 307px;
             position: absolute;
