--- a/resources/mixes/app-assets/sass/_variables.scss
+++ b/resources/mixes/app-assets/sass/_variables.scss
@@ -21,4 +21,4 @@ $border-radius: 0;
 $border-radius-lg: 0;
 $border-radius-sm: 0;
 
-$input-border-color: transparent;
+//$input-border-color: transparent;
