--- a/resources/mixes/app-assets/sass/parials/_globals.scss
+++ b/resources/mixes/app-assets/sass/parials/_globals.scss
@@ -23,3 +23,7 @@
 .form-control {
     height: unset;
 }
+
+.has-main {
+    background: linear-gradient(45deg, rgba($pink, 0.3), rgba($blue, 0.3));
+}
