--- a/public/app-assets/css/vendor.css
+++ b/public/app-assets/css/vendor.css
@@ -6704,7 +6704,7 @@ pre code {
   color: #495057;
   background-color: #fff;
   background-clip: padding-box;
-  border: 1px solid transparent;
+  border: 1px solid #ced4da;
   border-radius: 0;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
@@ -8440,7 +8440,7 @@ input[type=button].btn-block {
   text-align: center;
   white-space: nowrap;
   background-color: #e9ecef;
-  border: 1px solid transparent;
+  border: 1px solid #ced4da;
   border-radius: 0;
 }
 
@@ -8673,7 +8673,7 @@ input[type=button].btn-block {
   color: #495057;
   vertical-align: middle;
   background: #fff url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='5' viewBox='0 0 4 5'%3e%3cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/8px 10px;
-  border: 1px solid transparent;
+  border: 1px solid #ced4da;
   border-radius: 0;
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -8775,7 +8775,7 @@ input[type=button].btn-block {
   line-height: 1;
   color: #495057;
   background-color: #fff;
-  border: 1px solid transparent;
+  border: 1px solid #ced4da;
   border-radius: 0;
 }
 
