--- a/resources/mixes/app-assets/sass/_variables.scss
+++ b/resources/mixes/app-assets/sass/_variables.scss
@@ -4,7 +4,7 @@ $font-size-base: 1rem;
 $font-weight-base: 300;
 $line-height-base: 1;
 
-$blue: #4e90fe;
+$blue: #4285f4;
 $indigo: #6610f2;
 $purple: #6f42c1;
 $pink: #da46ae;
@@ -22,3 +22,5 @@ $border-radius-lg: 0;
 $border-radius-sm: 0;
 
 //$input-border-color: transparent;
+
+$breadcrumb-divider: '>';
