--- a/public/app-assets/css/vendor.css
+++ b/public/app-assets/css/vendor.css
@@ -4616,7 +4616,7 @@ readers do not read off random characters that represent icons */
  */
 
 :root {
-  --blue: #4285f4;
+  --blue: #4285F4;
   --indigo: #6610f2;
   --purple: #6f42c1;
   --pink: #da46ae;
@@ -4629,7 +4629,7 @@ readers do not read off random characters that represent icons */
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #da46ae;
+  --primary: #4285F4;
   --secondary: #6c757d;
   --success: #28a745;
   --info: #17a2b8;
@@ -4778,13 +4778,13 @@ sup {
 }
 
 a {
-  color: #da46ae;
+  color: #4285F4;
   text-decoration: none;
   background-color: transparent;
 }
 
 a:hover {
-  color: #b02386;
+  color: #0d5bdd;
   text-decoration: underline;
 }
 
@@ -6436,23 +6436,23 @@ pre code {
 .table-primary,
 .table-primary > th,
 .table-primary > td {
-  background-color: #f5cbe8;
+  background-color: #caddfc;
 }
 
 .table-primary th,
 .table-primary td,
 .table-primary thead th,
 .table-primary tbody + tbody {
-  border-color: #ec9fd5;
+  border-color: #9dc0f9;
 }
 
 .table-hover .table-primary:hover {
-  background-color: #f1b6df;
+  background-color: #b2cefb;
 }
 
 .table-hover .table-primary:hover > td,
 .table-hover .table-primary:hover > th {
-  background-color: #f1b6df;
+  background-color: #b2cefb;
 }
 
 .table-secondary,
@@ -6758,9 +6758,9 @@ pre code {
 .form-control:focus {
   color: #495057;
   background-color: #fff;
-  border-color: #efb0dd;
+  border-color: #bad3fb;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(218, 70, 174, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(66, 133, 244, 0.25);
 }
 
 .form-control::-moz-placeholder {
@@ -7257,7 +7257,7 @@ textarea.form-control.is-invalid {
 .btn:focus,
 .btn.focus {
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(218, 70, 174, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(66, 133, 244, 0.25);
 }
 
 .btn.disabled,
@@ -7276,43 +7276,43 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #da46ae;
-  border-color: #da46ae;
+  background-color: #4285F4;
+  border-color: #4285F4;
 }
 
 .btn-primary:hover {
   color: #fff;
-  background-color: #d02a9f;
-  border-color: #c62897;
+  background-color: #1e6ef2;
+  border-color: #1266f1;
 }
 
 .btn-primary:focus,
 .btn-primary.focus {
   color: #fff;
-  background-color: #d02a9f;
-  border-color: #c62897;
-  box-shadow: 0 0 0 0.2rem rgba(224, 98, 186, 0.5);
+  background-color: #1e6ef2;
+  border-color: #1266f1;
+  box-shadow: 0 0 0 0.2rem rgba(94, 151, 246, 0.5);
 }
 
 .btn-primary.disabled,
 .btn-primary:disabled {
   color: #fff;
-  background-color: #da46ae;
-  border-color: #da46ae;
+  background-color: #4285F4;
+  border-color: #4285F4;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active,
 .btn-primary:not(:disabled):not(.disabled).active,
 .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #c62897;
-  border-color: #bb258e;
+  background-color: #1266f1;
+  border-color: #0e60e9;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active:focus,
 .btn-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(224, 98, 186, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(94, 151, 246, 0.5);
 }
 
 .btn-secondary {
@@ -7603,24 +7603,24 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #da46ae;
-  border-color: #da46ae;
+  color: #4285F4;
+  border-color: #4285F4;
 }
 
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #da46ae;
-  border-color: #da46ae;
+  background-color: #4285F4;
+  border-color: #4285F4;
 }
 
 .btn-outline-primary:focus,
 .btn-outline-primary.focus {
-  box-shadow: 0 0 0 0.2rem rgba(218, 70, 174, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(66, 133, 244, 0.5);
 }
 
 .btn-outline-primary.disabled,
 .btn-outline-primary:disabled {
-  color: #da46ae;
+  color: #4285F4;
   background-color: transparent;
 }
 
@@ -7628,14 +7628,14 @@ fieldset:disabled a.btn {
 .btn-outline-primary:not(:disabled):not(.disabled).active,
 .show > .btn-outline-primary.dropdown-toggle {
   color: #fff;
-  background-color: #da46ae;
-  border-color: #da46ae;
+  background-color: #4285F4;
+  border-color: #4285F4;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus,
 .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-outline-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(218, 70, 174, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(66, 133, 244, 0.5);
 }
 
 .btn-outline-secondary {
@@ -7892,12 +7892,12 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #da46ae;
+  color: #4285F4;
   text-decoration: none;
 }
 
 .btn-link:hover {
-  color: #b02386;
+  color: #0d5bdd;
   text-decoration: underline;
 }
 
@@ -8203,7 +8203,7 @@ input[type=button].btn-block {
 .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #da46ae;
+  background-color: #4285F4;
 }
 
 .dropdown-item.disabled,
@@ -8568,22 +8568,22 @@ input[type=button].btn-block {
 
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #fff;
-  border-color: #da46ae;
-  background-color: #da46ae;
+  border-color: #4285F4;
+  background-color: #4285F4;
 }
 
 .custom-control-input:focus ~ .custom-control-label::before {
-  box-shadow: 0 0 0 0.2rem rgba(218, 70, 174, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(66, 133, 244, 0.25);
 }
 
 .custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
-  border-color: #efb0dd;
+  border-color: #bad3fb;
 }
 
 .custom-control-input:not(:disabled):active ~ .custom-control-label::before {
   color: #fff;
-  background-color: #f8dbef;
-  border-color: #f8dbef;
+  background-color: #ebf2fe;
+  border-color: #ebf2fe;
 }
 
 .custom-control-input[disabled] ~ .custom-control-label,
@@ -8635,8 +8635,8 @@ input[type=button].btn-block {
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #da46ae;
-  background-color: #da46ae;
+  border-color: #4285F4;
+  background-color: #4285F4;
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
@@ -8644,11 +8644,11 @@ input[type=button].btn-block {
 }
 
 .custom-checkbox .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(218, 70, 174, 0.5);
+  background-color: rgba(66, 133, 244, 0.5);
 }
 
 .custom-checkbox .custom-control-input:disabled:indeterminate ~ .custom-control-label::before {
-  background-color: rgba(218, 70, 174, 0.5);
+  background-color: rgba(66, 133, 244, 0.5);
 }
 
 .custom-radio .custom-control-label::before {
@@ -8660,7 +8660,7 @@ input[type=button].btn-block {
 }
 
 .custom-radio .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(218, 70, 174, 0.5);
+  background-color: rgba(66, 133, 244, 0.5);
 }
 
 .custom-switch {
@@ -8696,7 +8696,7 @@ input[type=button].btn-block {
 }
 
 .custom-switch .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(218, 70, 174, 0.5);
+  background-color: rgba(66, 133, 244, 0.5);
 }
 
 .custom-select {
@@ -8718,9 +8718,9 @@ input[type=button].btn-block {
 }
 
 .custom-select:focus {
-  border-color: #efb0dd;
+  border-color: #bad3fb;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(218, 70, 174, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(66, 133, 244, 0.25);
 }
 
 .custom-select:focus::-ms-value {
@@ -8783,8 +8783,8 @@ input[type=button].btn-block {
 }
 
 .custom-file-input:focus ~ .custom-file-label {
-  border-color: #efb0dd;
-  box-shadow: 0 0 0 0.2rem rgba(218, 70, 174, 0.25);
+  border-color: #bad3fb;
+  box-shadow: 0 0 0 0.2rem rgba(66, 133, 244, 0.25);
 }
 
 .custom-file-input[disabled] ~ .custom-file-label,
@@ -8848,15 +8848,15 @@ input[type=button].btn-block {
 }
 
 .custom-range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(218, 70, 174, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(66, 133, 244, 0.25);
 }
 
 .custom-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(218, 70, 174, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(66, 133, 244, 0.25);
 }
 
 .custom-range:focus::-ms-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(218, 70, 174, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(66, 133, 244, 0.25);
 }
 
 .custom-range::-moz-focus-outer {
@@ -8867,7 +8867,7 @@ input[type=button].btn-block {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #da46ae;
+  background-color: #4285F4;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -8884,7 +8884,7 @@ input[type=button].btn-block {
 }
 
 .custom-range::-webkit-slider-thumb:active {
-  background-color: #f8dbef;
+  background-color: #ebf2fe;
 }
 
 .custom-range::-webkit-slider-runnable-track {
@@ -8900,7 +8900,7 @@ input[type=button].btn-block {
 .custom-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #da46ae;
+  background-color: #4285F4;
   border: 0;
   border-radius: 1rem;
   -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -8917,7 +8917,7 @@ input[type=button].btn-block {
 }
 
 .custom-range::-moz-range-thumb:active {
-  background-color: #f8dbef;
+  background-color: #ebf2fe;
 }
 
 .custom-range::-moz-range-track {
@@ -8936,7 +8936,7 @@ input[type=button].btn-block {
   margin-top: 0;
   margin-right: 0.2rem;
   margin-left: 0.2rem;
-  background-color: #da46ae;
+  background-color: #4285F4;
   border: 0;
   border-radius: 1rem;
   -ms-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -8952,7 +8952,7 @@ input[type=button].btn-block {
 }
 
 .custom-range::-ms-thumb:active {
-  background-color: #f8dbef;
+  background-color: #ebf2fe;
 }
 
 .custom-range::-ms-track {
@@ -9079,7 +9079,7 @@ input[type=button].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #da46ae;
+  background-color: #4285F4;
 }
 
 .nav-fill > .nav-link,
@@ -9834,14 +9834,14 @@ input[type=button].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #da46ae;
+  color: #4285F4;
   background-color: #fff;
   border: 1px solid #dee2e6;
 }
 
 .page-link:hover {
   z-index: 2;
-  color: #b02386;
+  color: #0d5bdd;
   text-decoration: none;
   background-color: #e9ecef;
   border-color: #dee2e6;
@@ -9850,7 +9850,7 @@ input[type=button].btn-block {
 .page-link:focus {
   z-index: 3;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(218, 70, 174, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(66, 133, 244, 0.25);
 }
 
 .page-item:first-child .page-link {
@@ -9867,8 +9867,8 @@ input[type=button].btn-block {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #da46ae;
-  border-color: #da46ae;
+  background-color: #4285F4;
+  border-color: #4285F4;
 }
 
 .page-item.disabled .page-link {
@@ -9952,19 +9952,19 @@ a.badge:focus {
 
 .badge-primary {
   color: #fff;
-  background-color: #da46ae;
+  background-color: #4285F4;
 }
 
 a.badge-primary:hover,
 a.badge-primary:focus {
   color: #fff;
-  background-color: #c62897;
+  background-color: #1266f1;
 }
 
 a.badge-primary:focus,
 a.badge-primary.focus {
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(218, 70, 174, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(66, 133, 244, 0.5);
 }
 
 .badge-secondary {
@@ -10135,17 +10135,17 @@ a.badge-dark.focus {
 }
 
 .alert-primary {
-  color: #71245a;
-  background-color: #f8daef;
-  border-color: #f5cbe8;
+  color: #22457f;
+  background-color: #d9e7fd;
+  border-color: #caddfc;
 }
 
 .alert-primary hr {
-  border-top-color: #f1b6df;
+  border-top-color: #b2cefb;
 }
 
 .alert-primary .alert-link {
-  color: #4a183b;
+  color: #172f57;
 }
 
 .alert-secondary {
@@ -10284,7 +10284,7 @@ a.badge-dark.focus {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #da46ae;
+  background-color: #4285F4;
   transition: width 0.6s ease;
 }
 
@@ -10375,8 +10375,8 @@ a.badge-dark.focus {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #da46ae;
-  border-color: #da46ae;
+  background-color: #4285F4;
+  border-color: #4285F4;
 }
 
 .list-group-item + .list-group-item {
@@ -10549,20 +10549,20 @@ a.badge-dark.focus {
 }
 
 .list-group-item-primary {
-  color: #71245a;
-  background-color: #f5cbe8;
+  color: #22457f;
+  background-color: #caddfc;
 }
 
 .list-group-item-primary.list-group-item-action:hover,
 .list-group-item-primary.list-group-item-action:focus {
-  color: #71245a;
-  background-color: #f1b6df;
+  color: #22457f;
+  background-color: #b2cefb;
 }
 
 .list-group-item-primary.list-group-item-action.active {
   color: #fff;
-  background-color: #71245a;
-  border-color: #71245a;
+  background-color: #22457f;
+  border-color: #22457f;
 }
 
 .list-group-item-secondary {
@@ -11563,14 +11563,14 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #da46ae !important;
+  background-color: #4285F4 !important;
 }
 
 a.bg-primary:hover,
 a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-  background-color: #c62897 !important;
+  background-color: #1266f1 !important;
 }
 
 .bg-secondary {
@@ -11699,7 +11699,7 @@ button.bg-dark:focus {
 }
 
 .border-primary {
-  border-color: #da46ae !important;
+  border-color: #4285F4 !important;
 }
 
 .border-secondary {
@@ -15297,12 +15297,12 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #da46ae !important;
+  color: #4285F4 !important;
 }
 
 a.text-primary:hover,
 a.text-primary:focus {
-  color: #b02386 !important;
+  color: #0d5bdd !important;
 }
 
 .text-secondary {
