--- a/resources/mixes/app-assets/sass/parials/_globals.scss
+++ b/resources/mixes/app-assets/sass/parials/_globals.scss
@@ -25,5 +25,5 @@
 }
 
 .has-main {
-    background: linear-gradient(45deg, rgba($pink, 0.3), rgba($blue, 0.3));
+    background: rgba($black, 0.05);
 }
