--- a/resources/mixes/app-assets/sass/_variables.scss
+++ b/resources/mixes/app-assets/sass/_variables.scss
@@ -4,7 +4,7 @@ $font-size-base: 1rem;
 $font-weight-base: 300;
 $line-height-base: 1;
 
-$blue: #4285f4;
+$blue: #4285F4;
 $indigo: #6610f2;
 $purple: #6f42c1;
 $pink: #da46ae;
@@ -14,8 +14,10 @@ $yellow: #ffc107;
 $green: #28a745;
 $teal: #20c997;
 $cyan: #17a2b8;
+$white: #fff;
+$black: #000;
 
-$primary: $pink;
+$primary: $blue;
 
 $border-radius: 0;
 $border-radius-lg: 0;
