--- a/resources/mixes/app/sass/partials/_datatable.scss
+++ b/resources/mixes/app/sass/partials/_datatable.scss
@@ -69,6 +69,8 @@
     inset-inline-start: 0;
     margin-top: -.15rem;
     min-width: 100px;
+    white-space: nowrap;
+
 
     > ul {
       overflow: auto;
