--- a/resources/mixes/app/sass/sb/layout/_dashboard-fixed.scss
+++ b/resources/mixes/app/sass/sb/layout/_dashboard-fixed.scss
@@ -3,35 +3,35 @@
 //
 
 .sb-nav-fixed {
-    .sb-topnav {
-        @extend .fixed-top;
-        z-index: $zindex-topnav;
+  .sb-topnav {
+    @extend .fixed-top;
+    z-index: $zindex-topnav;
+  }
+
+  #wrapper {
+    #sidebar {
+      @extend .fixed-top;
+      width: $sidenav-base-width;
+      height: 100vh;
+      z-index: $zindex-sidenav;
+
+      .sb-sidenav {
+        padding-top: $topnav-base-height;
+
+        .sb-sidenav-menu {
+          overflow-y: auto;
+        }
+      }
     }
 
-    #wrapper {
-        #sidebar {
-            @extend .fixed-top;
-            width: $sidenav-base-width;
-            height: 100vh;
-            z-index: $zindex-sidenav;
+    #content {
+      padding-left: $sidenav-base-width;
+      top: $topnav-base-height;
 
-            .sb-sidenav {
-                padding-top: $topnav-base-height;
-
-                .sb-sidenav-menu {
-                    overflow-y: auto;
-                }
-            }
-        }
-
-        #content {
-            padding-left: $sidenav-base-width;
-            top: $topnav-base-height;
-
-            [dir=rtl] & {
-                padding-left: 0;
-                padding-right: $sidenav-base-width;
-            }
-        }
+      [dir='rtl'] & {
+        padding-left: 0;
+        padding-right: $sidenav-base-width;
+      }
     }
+  }
 }
