--- a/resources/mixes/app/sass/_rtl.scss
+++ b/resources/mixes/app/sass/_rtl.scss
@@ -1,4 +1,4 @@
-[dir=rtl] {
+[dir='rtl'] {
   .dropdown-toggle::after {
     margin-left: 0;
     margin-right: 0.255em;
@@ -30,13 +30,16 @@
   }
 
   .input-group:not(.has-validation) > :not(:last-child):not(.dropdown-toggle):not(.dropdown-menu):not(.form-floating),
-  .input-group:not(.has-validation) > .dropdown-toggle:nth-last-child(n+3),
+  .input-group:not(.has-validation) > .dropdown-toggle:nth-last-child(n + 3),
   .input-group:not(.has-validation) > .form-floating:not(:last-child) > .form-control,
   .input-group:not(.has-validation) > .form-floating:not(:last-child) > .form-select {
     border-radius: 0 0.25rem 0.25rem 0;
   }
 
-  .input-group > :not(:first-child):not(.dropdown-menu):not(.valid-tooltip):not(.valid-feedback):not(.invalid-tooltip):not(.invalid-feedback) {
+  .input-group
+    > :not(:first-child):not(.dropdown-menu):not(.valid-tooltip):not(.valid-feedback):not(.invalid-tooltip):not(
+      .invalid-feedback
+    ) {
     margin-left: 0;
     margin-right: -1px;
     border-radius: 0.25rem 0 0 0.25rem;
@@ -58,8 +61,9 @@
     margin-right: -1px;
   }
 
-  .btn-group > .btn:nth-child(n+3),
-  .btn-group > :not(.btn-check) + .btn, .btn-group > .btn-group:not(:first-child) > .btn {
+  .btn-group > .btn:nth-child(n + 3),
+  .btn-group > :not(.btn-check) + .btn,
+  .btn-group > .btn-group:not(:first-child) > .btn {
     border-radius: var(--bs-btn-border-radius) 0 0 var(--bs-btn-border-radius);
   }
 
@@ -67,7 +71,7 @@
     .fm-navbar {
       .col-auto > .btn-group:not(:last-child) {
         margin-right: 0;
-        margin-left: .4rem;
+        margin-left: 0.4rem;
       }
     }
 
