--- a/resources/mixes/app/sass/_variables.scss
+++ b/resources/mixes/app/sass/_variables.scss
@@ -7,23 +7,23 @@ $border-radius: 0;
 //$input-border-color: transparent;
 
 // Colors
-$blue:    #0d6efd;
-$indigo:  #6610f2;
-$purple:  #6f42c1;
-$pink:    #d63384;
-$red:     #dc3545;
-$orange:  #fd7e14;
-$yellow:  #ffc107;
+$blue: #0d6efd;
+$indigo: #6610f2;
+$purple: #6f42c1;
+$pink: #d63384;
+$red: #dc3545;
+$orange: #fd7e14;
+$yellow: #ffc107;
 $green: #46b70f;
-$teal:    #20c997;
-$cyan:    #0dcaf0;
+$teal: #20c997;
+$cyan: #0dcaf0;
 
 // Import Bootstrap variables for use within theme
-@import "~bootstrap/scss/functions";
-@import "~bootstrap/scss/variables";
+@import '~bootstrap/scss/functions';
+@import '~bootstrap/scss/variables';
 
 // Import spacing variables
-@import "./sb/variables/spacing";
+@import './sb/variables/spacing';
 
 // Import navigation variables
-@import "./sb/variables/navigation";
+@import './sb/variables/navigation';
