--- a/resources/mixes/app/sass/partials/_datatable.scss
+++ b/resources/mixes/app/sass/partials/_datatable.scss
@@ -3,7 +3,7 @@
 
   &.sorting-asc {
     &:after {
-      content: "\F15E";
+      content: '\F15E';
       font-family: 'Font Awesome 5 Free';
       -moz-osx-font-smoothing: grayscale;
       -webkit-font-smoothing: antialiased;
@@ -20,7 +20,7 @@
 
   &.sorting-desc {
     &:after {
-      content: "\F881";
+      content: '\F881';
       font-family: 'Font Awesome 5 Free';
       -moz-osx-font-smoothing: grayscale;
       -webkit-font-smoothing: antialiased;
@@ -42,7 +42,7 @@
   }
 
   &:not(.date):after {
-    content: "\f0b0";
+    content: '\f0b0';
     font-family: 'Font Awesome 5 Free';
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
@@ -67,10 +67,9 @@
     z-index: 10;
     top: 100%;
     inset-inline-start: 0;
-    margin-top: -.15rem;
+    margin-top: -0.15rem;
     min-width: 100px;
     white-space: nowrap;
-
 
     > ul {
       overflow: auto;
@@ -78,7 +77,7 @@
       font-weight: normal;
 
       li {
-        padding: .25em .5rem;
+        padding: 0.25em 0.5rem;
         padding-inline-end: 1rem;
 
         &.active {
@@ -88,7 +87,6 @@
         &.selected {
           //background: $primary;
         }
-
       }
     }
   }
