--- a/resources/mixes/app/sass/sb/_variables.scss
+++ b/resources/mixes/app/sass/sb/_variables.scss
@@ -1,13 +1,13 @@
-// 
+//
 // Variables
-// 
+//
 
 // Import Bootstrap variables for use within theme
-@import "bootstrap/scss/functions.scss";
-@import "bootstrap/scss/variables.scss";
+@import 'bootstrap/scss/functions.scss';
+@import 'bootstrap/scss/variables.scss';
 
 // Import spacing variables
-@import "./variables/spacing.scss";
+@import './variables/spacing.scss';
 
 // Import navigation variables
-@import "./variables/navigation.scss";
+@import './variables/navigation.scss';
