--- a/resources/mixes/app/sass/sb/navigation/sidenav/_sidenav.scss
+++ b/resources/mixes/app/sass/sb/navigation/sidenav/_sidenav.scss
@@ -40,7 +40,7 @@
           margin-left: auto;
           transition: transform 0.15s ease;
 
-          [dir=rtl] & {
+          [dir='rtl'] & {
             margin-left: 0;
             margin-right: auto;
           }
@@ -50,7 +50,7 @@
           .sb-sidenav-collapse-arrow {
             transform: rotate(-90deg);
 
-            [dir=rtl] & {
+            [dir='rtl'] & {
               transform: rotate(90deg);
             }
           }
@@ -61,7 +61,7 @@
         margin-left: 1.5rem;
         flex-direction: column;
 
-        [dir=rtl] & {
+        [dir='rtl'] & {
           margin-left: 0;
           margin-right: 1.5rem;
         }
