--- a/resources/mixes/app/sass/vendor.scss
+++ b/resources/mixes/app/sass/vendor.scss
@@ -1,13 +1,13 @@
-@import "variables";
+@import 'variables';
 
-@import "~bootstrap/scss/bootstrap";
+@import '~bootstrap/scss/bootstrap';
 
-@import "sb/styles";
+@import 'sb/styles';
 
-@import "@fortawesome/fontawesome-free/css/all.css";
-@import "bootstrap-icons/font/bootstrap-icons.css";
+@import '@fortawesome/fontawesome-free/css/all.css';
+@import 'bootstrap-icons/font/bootstrap-icons.css';
 
-@import "rtl";
+@import 'rtl';
 
 .fm-modal {
   @extend .modal;
